tests/fixtures/LatestTests/ObjectTests/errors/assign_member_access_to_wrong_type.fg
/; EXPECT_ERROR: AssignmentExpressionTypeMismatch
type Person = {
    name: str
    age: int
}

var p: Person = {
    name: "John",
    age: 30
}

var x: int = 10

p.name = x

